--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <div class="logo">
-        <img class="mcdonald" src="image.png"/>
+        <img class="mcdonald" src="Logo_on_white_desktop_Small.jpg">
     </div>
     <div class="nav_and_links">
         <div class="header_div">
