--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <a href="wtt"><img src="instagram2.png"></a>
         </div>
         <div class="contacts_part_two">
-            <a href="wrfty"><img class="a" src="appstore_icon.png"></a>
+            <a href="wrfty"><img class="a" src="app_store_badge.png"></a>
             <a href="Rwtr"><img class="m" src="googleplay_icon.png"></a>
         </div>
 </div>
