--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
         <div class="contacts_part_two">
             <a href="wrfty"><img class="a" src="app_store_badge.png"></a>
-            <a href="Rwtr"><img class="m" src="googleplay_icon.png"></a>
+            <a href="Rwtr"><img class="m" src="google_play_badge.png"></a>
         </div>
 </div>
 <div class="end">
