--- a/index.html
+++ b/index.html
@@ -1,57 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>McDonald's</title>
-    <link rel="stylesheet" href="style2.css">
-</head>
-<body>
-<header>
-    <div class="logo">
-        <img class="mcdonald" src="Logo_on_white_desktop_Small.jpg">
-    </div>
-    <div class="nav_and_links">
-        <div class="header_div">
-            <div class="first_line">
-                <div class="part_one">
-                    <a href="dh" class="a">Відкриті ресторани</a>
-                </div>
-                <div class="part_two">
-                    <a href="xh" class="a"><img src="Group 1 (3).svg" width="20px">Пошук</a>
-                    <a href="xh" class="a"> <img src="Group 1 (4).svg" width="15px">Знайти нас</a>
-                </div>
-            </div>
-            <nav class="a">
-            <details>
-                <summary>Меню </summary>
-            </details>
-                <a href="ws vy">McDelivery</a>
-                <a href="dnh">Мобільний застосунок</a>
-                <h2><a href="ehyr">Стратегія впливу</a></h2>
-                <a href="dg">Якість та гігієна</a>
-                <a href="rdh">Кар'єра</a>
-            </nav>
-        </div>
-    </div>
-</header>
-<main>
-<h1> Стратегія впливу</h1>
-<div class="div1">
-    <div class="img-div">
-<img src="https://s7d1.scene7.com/is/image/mcdonalds/Social-responsibility_Header_Boys_1260x560-pxl:hero-desktop?resmode=sharp2">
-    </div>
-    <div class="img-div2">
-<p>Ми тут - до ваших послуг</p>
-
-<p>Ще ніколи громади не були такими важливими. А McDonald’s завжди там – де громада. До нас звертаються у пошуку роботи, коли опиняються в незнайомому місті,<br> коли потребують затишного куточку й гарячої страви.</p>
-
-<p>Ми не просто обслуговуємо відвідувачів, частуючи їх Біг-Маками, ми віддано служимо нашим працівникам, клієнтам, партнерам, постачальникам і кожному із<br> громади, хто до нас причетний. Тому зараз, коли українці як ніколи потребують підтримки, ми зі ще більшою силою працюємо, щоб допомогти громадам.</p>
-
-<p>З першого дня повномасштабної війни на потреби населення ми передали більше 700 тонн продукції на понад 130 мільйонів гривень, працівники МакДональдз<br> разом із Фундацією Дім Рональда МакДональда започаткували програми підтримки сімей і лікарень, які постраждали через війну. Наші працівники активно<br> волонтерять в програмах Фундації, використовуючи для цього увесь свій досвід та експертизу, здобуту в МакДональдз.</p>
-
-<p>Ми беремо на себе зобов’язання, що забезпечать підтримку наших громад у складний час тепер і в майбутньому. Ми працюємо, аби потішити українців<br> улюбленими стравами, аби підтримати наших працівників і партнерів, аби працювати, щоб сплачувати податки і підтримувати економіку країни.</p>
-
 <p>Дивлячись у майбутнє, ми маємо амбіцію зробити значно більше. З цієї причини ми продовжуємо зосереджувати зусилля на чотирьох напрямах:</p>
 </div>
 <ul class="main-ul">
@@ -112,7 +58,7 @@
 </div>
 </div>
 
-
+<div class="ends">
 <div class="contacts_div">
         <div class="contacts_part_one">
             <a href="eyt"><img src="facebook2.png"></a>
@@ -137,6 +83,7 @@
         <img class="footer" src="Logo_on_white_desktop_Small.png">
         <p>Усi права захищенi ©2024 МакДональдз®</p>
     </div>
+</div>
 </div>
 </footer>
 </body>
