--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 
     <div class="end_part_two">
-        <img class="footer" src="Logo_on_white_desktop_Small.png">
+        <img class="footer" src="Logo_on_white_desktop_Small.jpg">
         <p>Усi права захищенi ©2024 МакДональдз®</p>
     </div>
 </div>
