--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
         <div class="header_div">
             <div class="first_line">
                 <div class="part_one">
-                    <a href="dh" class="a">Відкриті ресторани</a>
+                    <a href="https://kirill201213.github.io/This-site-is-not-ready-please-wait/" class="a">Відкриті ресторани</a>
                 </div>
                 <div class="part_two">
-                    <a href="xh" class="a"><img src="Group 1 (3).svg" width="20px">Пошук</a>
-                    <a href="xh" class="a"> <img src="Group 1 (4).svg" width="15px">Знайти нас</a>
+                    <a href="https://kirill201213.github.io/This-site-is-not-ready-please-wait/" class="a"><img src="Group 1 (3).svg" width="20px">Пошук</a>
+                    <a href="https://kirill201213.github.io/This-site-is-not-ready-please-wait/" class="a"> <img src="Group 1 (4).svg" width="15px">Знайти нас</a>
                 </div>
             </div>
             <nav class="a">
             <details>
                 <summary>Меню </summary>
             </details>
-                <a href="ws vy">McDelivery</a>
+                <a href="https://kirill201213.github.io/This-site-is-not-ready-please-wait/">McDelivery</a>
                 <a href="dnh">Мобільний застосунок</a>
                 <h2><a href="ehyr">Стратегія впливу</a></h2>
                 <a href="dg">Якість та гігієна</a>
-                <a href="rdh">Кар'єра</a>
+                <a href="https://kirill201213.github.io/This-site-is-not-ready-please-wait/">Кар'єра</a>
             </nav>
         </div>
     </div>
@@ -121,14 +121,14 @@
             <a href="wtt"><img src="instagram2.png"></a>
         </div>
         <div class="contacts_part_two">
-            <a href="wrfty"><img class="a" src="app_store_badge.png"></a>
-            <a href="Rwtr"><img class="m" src="google_play_badge.png"></a>
+            <a href="https://kirill201213.github.io/This-site-is-not-ready-please-wait/"><img class="a" src="app_store_badge.png"></a>
+            <a href="https://kirill201213.github.io/This-site-is-not-ready-please-wait/"><img class="m" src="google_play_badge.png"></a>
         </div>
 </div>
 <div class="end">
     <div class="end_part_one">
-    <p>Політика конфіденційності</p>
-    <p>Положення та умови</p>
+    <a href="https://kirill201213.github.io/Mcdonalds-2/"><p>Політика конфіденційності</p></a>
+    <a href="https://kirill201213.github.io/Mcdonalds-7/"><p>Положення та умови</p></a>
     </div>
 
 
