--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <summary>Меню </summary>
             </details>
                 <a href="https://kirill201213.github.io/This-site-is-not-ready-please-wait/">McDelivery</a>
-                <a href="dnh">Мобільний застосунок</a>
-                <h2><a href="ehyr">Стратегія впливу</a></h2>
-                <a href="dg">Якість та гігієна</a>
+                <a href="https://kirill201213.github.io/Mcdonalds-3/">Мобільний застосунок</a>
+                <h2><a href="https://kirill201213.github.io/Mcdonalds-4/">Стратегія впливу</a></h2>
+                <a href="https://kirill201213.github.io/Mcdonalds-5/">Якість та гігієна</a>
                 <a href="https://kirill201213.github.io/This-site-is-not-ready-please-wait/">Кар'єра</a>
             </nav>
         </div>
