--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
 <img class="img-1" src="https://s7d1.scene7.com/is/image/mcdonalds/Social-responsibility-1_376x376pxl:2-column-desktop?resmode=sharp2">
 <p><h1>Фундація Дім Рональда<br> МакДональда</h1></p>
 <p>Присутність батьків у лікарні допомагає дітям<br> успішніше боротися з хворобою. З підтримкою<br> рідних нам усе вдається краще. Тільки рідні можуть<br> дати тепло та відчуття безпеки.</p>
-<a class="a1" href="">Дізнатись більше</a>
+<a class="a1" href="https://kirill201213.github.io/This-site-is-not-ready-please-wait/">Дізнатись більше</a>
 </div>
 <div class="footer-div1">
 <img class="img-2" src="https://s7d1.scene7.com/is/image/mcdonalds/Social-responsibility_Sortuvannya-ta-pererobka_574x574pxl:2-column-desktop?resmode=sharp2">
 <p><h1>Збереження планети для нас у<br> пріоритеті</h1></p>
 <p>Ми виступаємо рушійною силою із захисту клімату<br> та навколишнього середовища й прискорюємо<br> провадження рішень із багаторазового<br> використання. Тому, що вважаємо нашим<br> обов’язком берегти планету на благо нинішніх і<br> майбутніх громад.</p>
-<a class="a1" href="">Дізнатись більше</a>
+<a class="a1" href="https://kirill201213.github.io/This-site-is-not-ready-please-wait/">Дізнатись більше</a>
 </div>
 <div class="footer-div1">
 <img class="img-3" src="https://s7d1.scene7.com/is/image/mcdonalds/McD_site_(3)_2336%D1%851040_(safe_1562px)_feb2024:2-column-desktop?resmode=sharp2">
 <p><h1>  Робочі місця, рівність та<br> розширення можливостей  </h1></p>
 <p>Ми створюємо можливості для навчання та<br> здобуття професійних навичок у громадах, де<br> працюємо, – через посилення рівності та<br> причетності до всього нашого бізнесу.</p>
-<a class="a1" href="">Дізнатись більше</a>
+<a class="a1" href="https://kirill201213.github.io/This-site-is-not-ready-please-wait/">Дізнатись більше</a>
 </div>
 </div>
 <div class="qqq">
