--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
 <div class="ends">
 <div class="contacts_div">
         <div class="contacts_part_one">
-            <a href="eyt"><img src="facebook2.png"></a>
-            <a href="wte"><img src="Tik_tok_logo.png"></a>
-            <a href="3te"><img src="youtube2.png"></a>
-            <a href="wtet"><img src="twitter2.png"></a>
-            <a href="wtt"><img src="instagram2.png"></a>
+            <a href="https://kirill201213.github.io/This-is-not-the-point-of-my-site./"><img src="facebook2.png"></a>
+            <a href="https://kirill201213.github.io/This-is-not-the-point-of-my-site./"><img src="Tik_tok_logo.png"></a>
+            <a href="https://kirill201213.github.io/This-is-not-the-point-of-my-site./"><img src="youtube2.png"></a>
+            <a href="https://kirill201213.github.io/This-is-not-the-point-of-my-site./"><img src="twitter2.png"></a>
+            <a href="https://kirill201213.github.io/This-is-not-the-point-of-my-site./"><img src="instagram2.png"></a>
         </div>
         <div class="contacts_part_two">
             <a href="https://kirill201213.github.io/This-site-is-not-ready-please-wait/"><img class="a" src="app_store_badge.png"></a>
