--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 </div>
 <div class="end">
     <div class="end_part_one">
-    <a href="https://kirill201213.github.io/Mcdonalds-2/"><p>Політика конфіденційності</p></a>
-    <a href="https://kirill201213.github.io/Mcdonalds-7/"><p>Положення та умови</p></a>
+    <a class="a" href="https://kirill201213.github.io/Mcdonalds-2/"><p>Політика конфіденційності</p></a>
+    <a class="a" href="https://kirill201213.github.io/Mcdonalds-7/"><p>Положення та умови</p></a>
     </div>
 
 
