--- a/index.html
+++ b/index.html
@@ -202,15 +202,15 @@
 <div class="ends">
 <div class="contacts_div">
         <div class="contacts_part_one">
-            <a href="https://kirill201213.github.io/This-is-not-the-point-of-my-site./"><img src="facebook2.png"></a>
-            <a href="https://kirill201213.github.io/This-is-not-the-point-of-my-site./"><img src="Tik_tok_logo.png"></a>
-            <a href="https://kirill201213.github.io/This-is-not-the-point-of-my-site./"><img src="youtube2.png"></a>
-            <a href="https://kirill201213.github.io/This-is-not-the-point-of-my-site./"><img src="twitter2.png"></a>
-            <a href="https://kirill201213.github.io/This-is-not-the-point-of-my-site./"><img src="instagram2.png"></a>
+            <a href="https://www.facebook.com/McDonaldsUA/"><img src="facebook2.png"></a>
+            <a href="https://www.tiktok.com/@mcdonaldsukraine?lang=uk-UA"><img src="Tik_tok_logo.png"></a>
+            <a href="https://www.youtube.com/user/mcdonaldsua"><img src="youtube2.png"></a>
+            <a href="https://twitter.com/McDonaldsUA"><img src="twitter2.png"></a>
+            <a href="https://www.instagram.com/mcdonaldsukraine/"><img src="instagram2.png"></a>
         </div>
         <div class="contacts_part_two">
-            <a href="https://kirill201213.github.io/This-site-is-not-ready-please-wait/"><img class="a" src="app_store_badge.png"></a>
-            <a href="https://kirill201213.github.io/This-site-is-not-ready-please-wait/"><img class="m" src="google_play_badge.png"></a>
+            <a href="https://apps.apple.com/ua/app/mcdonalds/id1217507712"><img class="a" src="app_store_badge.png"></a>
+            <a href="https://play.google.com/store/apps/details?id=com.mcdonalds.mobileapp"><img class="m" src="google_play_badge.png"></a>
         </div>
 </div>
 <div class="end">
